--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -357,6 +357,6 @@ The example below is a SQL query that would return the user information in the c
 
 ### Finding further support for migrating from Auth.js to Clerk
 
-This guide covers the most common steps that you would take for the migration. If you have more complex integrations with Auth that are not covered here, don't hesitate to hop into the Clerk discord and open a support question.
+This guide covers the most common steps that you would take for the migration. If you have more complex integrations with Auth.js that are not covered here, don't hesitate to reach out in the [Clerk Discord](https://discord.com/invite/b5rXHjAg7A) by creating a post in the [Support channel](https://discord.gg/bmPVkeqKzZ).
 
 </Steps>
