--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -81,7 +81,7 @@ You will need to remove the `<SessionProvider session={session}>` provider from 
 
 <CodeBlockTabs type="installer" options={["App Router", "Pages Router"]}>
 
-```tsx filename="app/layout.tsx"
+```tsx filename="app/layout.tsx" {1,10,13}
 import { ClerkProvider } from '@clerk/nextjs'
 import './globals.css'
  
@@ -100,7 +100,7 @@ export default function RootLayout({
 }
 ```
 
-```tsx filename="_app.tsx"
+```tsx filename="pages/_app.tsx" {2,6,8}
 import '@/styles/globals.css'
 import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
@@ -203,10 +203,11 @@ export default function Page() {
 }
 ```
 
-Use [`auth()`](/docs/references/nextjs/auth#auth) if you are using App Router or [`getAuth()`](/docs/references/nextjs/get-auth#get-auth) if you are using Pages Router to read your user data.
+Now let's see what your code should look like when replacing `getServerSession` with Clerk's helpers:
 
-<CodeBlockTabs type="installer" options={["App Router", "Pages Router"]}>
-
+<Tabs type="installer" items={["App Router", "Pages Router"]}>
+<Tab>
+You can replace Auth.js's `setServerSession` with Clerk's [`auth()`](/docs/references/nextjs/auth#auth) helper in order to read your user data.
 ```tsx failename="app/page.tsx"
 import { auth, currentUser } from "@clerk/nextjs";
  
@@ -214,23 +215,23 @@ export default async function Page() {
  
   const { userId } = auth();
   console.log(userId)
-
   return (
     <p>Home Page</p>
   )
-
 }
 ```
-
-```tsx filename="app/page.tsx"
-
+</Tab>
+<Tab>
+You can replace Auth.js's `setServerSession` with Clerk's [`getAuth()`](/docs/references/nextjs/get-auth#get-auth) helper in order to read your user data.
+```tsx filename="pages/index.tsx"
 export async function getServerSideProps(context) {
   const session = getAuth(context.req);
 	
 	return { props: { ...buildClerkProps(ctx.req) } };
 };
 ```
-</CodeBlockTabs>
+</Tab>
+</Tabs>
 
 #### Client Side
 
