--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -281,7 +281,7 @@ When you migrate to Clerk, you will likely need to resolve the foreign key that 
 
 #### Use Clerk's `externalId` field
 
-When you migrate user data from Auth's database to Clerk, Clerk generates new user IDs for each user. If you are using existing user IDs as foreign keys in your database (e.g. in a `user_id` column), you can save those IDs as the user's `externalId` in Clerk. This `externalId` can be included in the session token by adding the following [customization](/docs/backend-requests/making/custom-session-token). The following example will return the `externalId` if one is present, and if not will return the Clerk `userId`.
+When you migrate user data from Auth.js to Clerk, Clerk generates new user IDs for each user. If you are using existing user IDs as foreign keys in your database (e.g. in a `user_id` column), you can save those IDs as the user's `externalId` in Clerk. This `externalId` can be included in the session token by adding the following [customization](/docs/backend-requests/making/custom-session-token). The following example will set the user's ID to be `externalId` if one is present, otherwise, it will use the Clerk's user ID.
 
 ```json
 {
@@ -289,7 +289,9 @@ When you migrate user data from Auth's database to Clerk, Clerk generates new us
 }
 ``` 
 
-In your application, you can access this combined `userId` via session claims.
+<Tabs type="router" items={["App Router", "Pages Router"]}>
+<Tab>
+To access the `userId` from the session claims, you can use the `auth()` helper.
 
 ```tsx filename="app/page.tsx"
 import { auth } from "@clerk/nextjs";
@@ -305,6 +307,29 @@ export default async function Page() {
 
 }
 ```
+</Tab>
+
+<Tab>
+To access the `userId` from the session claims, you can use the `getAuth()` helper.
+```tsx filename="pages/index.tsx"
+import { getAuth, buildClerkProps } from "@clerk/nextjs/server";
+import { GetServerSideProps } from "next";
+ 
+export const getServerSideProps: GetServerSideProps = async (ctx) => {
+  const { userId } = getAuth(ctx.req);
+ 
+  if (!userId) {
+    // handle user is not logged in.
+  }
+ 
+  const { sessionClaims: { userId } } = getAuth(req)
+  console.log(userId)
+ 
+  return { props: { ...buildClerkProps(ctx.req) } };
+};
+```
+</Tab>
+</Tabs>
 
 <Callout type="info">
 You can not access the above from the client side. If you are using one of Clerk's hooks, then you will need to check if `externalID` exists. If it doesn't, then read the `userId`. 
@@ -353,11 +378,11 @@ The example below is a SQL query that would return the user information in the c
     
 5. Edit the `.env.` file in the migration, and add your Clerk Secret Key using `CLERK_SECRET_KEY`
 6. Run the script with `npm start`
-7. Verify by signing in to your application secured by Clerk, and by checking the users listed in the [Users](https://dashboard.clerk.com/last-active?path=users) section of the Clerk Dashboard.
+7. Check that your users are listed in the [Users](https://dashboard.clerk.com/last-active?path=users) section of the Clerk Dashboard. If the users appear to have imported correctly, verify by signing in to your application secured by Clerk with your user account.
 9. Check for an error log for any users that were not migrated successfully.
 
 ### Finding further support for migrating from Auth.js to Clerk
 
-This guide covers the most common steps that you would take for the migration. If you have more complex integrations with Auth.js that are not covered here, don't hesitate to reach out in the [Clerk Discord](https://discord.com/invite/b5rXHjAg7A) by creating a post in the [Support channel](https://discord.gg/bmPVkeqKzZ).
+This guide covers the most common steps that you would take for the migration. If you have more complex integrations with Auth.js that are not covered here, don't hesitate to reach out in the [Clerk Discord](https://clerk.com/discord) by creating a post in the [Support channel](https://discord.gg/bmPVkeqKzZ).
 
 </Steps>
