create references for has and protect

--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -14,7 +14,7 @@ In the Clerk Dashboard, you can create roles, assign permissions to them, and ch
 3. Give the role a name, a key to reference it by in the format `org:<role>`, and a description.
 4. Select **Create role**.
 
-## Assign permissions to a role
+## Create a new permission for your organization
 
 1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the **Permissions** tab. 
 2. Select **Create new permission**.
