--- a/docs/organizations/verify-user-permissions.mdx
+++ b/docs/organizations/verify-user-permissions.mdx
@@ -11,20 +11,10 @@ description: A collection of utility functions and components in order to allow 
 
 Clerk provides two kinds of helpers for authorization:
 
-- **`protect` helpers** are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect>` component](/docs/components/protect) and the experimental `auth().protect()` method fall into this category.
-- **`has` helpers** are more composable and flexible. They allow you to check and see what permissions a user _has_. You can decide what to do if the user lacks the permission.
+- `protect()` helpers are opinionated and will block additional processing for unauthorized users, either by not rendering children or by throwing errors. The [`<Protect>` component](/docs/components/protect) and the experimental [`auth().protect()`](/docs/references/nextjs/auth#protect) method fall into this category.
+- [`has()` helpers](/docs/references/nextjs/authentication-object#has) are more composable and flexible. They allow you to check and see what permissions a user *has*. You can decide what to do if the user lacks the permission.
 
 Both kinds of helpers can check a user's role and permissions. The recommended approach is to verify a user's permissions. Roles can be added and removed and their permissions changed. Authorizing by permissions is explicit.
-
-## `has()`
-
-Clerk's `has()` function can be used on both the frontend and the backend to determine if the user _has_ a role or permission.
-
-`has()` can be used anywhere that Clerk returns an [`Authentication` object](/docs/references/nextjs/authentication-object):
-
-- [`auth()`](/docs/references/nextjs/auth) in Next.js App Router
-- [`useAuth()`](/docs/references/react/use-auth) in Client Components, including during SSR
-- [`getAuth(request)`](/docs/references/nextjs/get-auth) in server contexts outside of the App Router and SSR (Remix Loaders, Node, Express, Fastify, etc)
 
 ## Authorization in Client Components
 
@@ -167,7 +157,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
       `auth().protect()` will throw a `notFound` Next.js error if authorization checks fail.
     </Callout>
 
-    #### Using `auth().protect()`
+    ### Using `auth().protect()`
 
     ```tsx
       import { useAuth } from "@clerk/nextjs";
@@ -180,7 +170,7 @@ The examples below work for both SSR and CSR. Examples are written for Next.js A
       }
     ```
 
-    #### Using `has()`
+    ### Using `has()`
 
     ```tsx
       import { useAuth } from "@clerk/nextjs";
