add explanations for code examples

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -17,8 +17,8 @@ A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middlewar
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `protect` | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Next.js error if the user is unauthorized. Otherwise, it returns an `Authentication` object. |
-| `redirectToSignIn` | <code>(params?: [RedirectToParams](#redirect-to-params)) => ReturnType</code> | Redirects the user to the sign-in page. |
+| [`protect`](#protect) | Function | Accepts a permission or a role key or a function with `has` as the first parameter. It will throw a `notFound` Next.js error if the user is unauthorized. Otherwise, it returns an `Authentication` object. |
+| [`redirectToSignIn`](#redirect-to-sign-in) | Function | Redirects the user to the sign-in page. |
 
 ### `protect()`
 
@@ -36,15 +36,15 @@ You can use the `protect()` helper to check if a user is authorized to access a 
 | `permission` | `string` | The permission to check for. |
 | `has` | <code>(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) => boolean</code> | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization. See the dedicated [`has()`](/docs/references/nextjs/authentication-object#has) section for more information. |
 
-### `RedirectToParams`
+### `redirectToSignIn()`
 
-Parameter for `redirectToSignIn`, a method accessible on the `auth()` helper.
+`redirectToSignIn()` is a method that redirects the user to the sign-in page. It accepts the following parameters:
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `returnBackUrl?` | `string \| URL` | The URL to redirect the user back to after they sign in. |
 
-## Retrieve `userId`
+## Use `auth()` to retrieve `userId`
 
 ```tsx filename="app/page.[jsx/tsx]"
 import { auth } from '@clerk/nextjs';
@@ -55,7 +55,7 @@ const { userId } : { userId: string | null } = auth();
 }
 ```
 
-## Data fetching
+## Use `auth()` for data fetching
 
 When using a Clerk integration, or if you need to send a JWT along to a server, you can use the `getToken` function.
 
@@ -80,9 +80,17 @@ export async function GET() {
 }
 ```
 
-## Authorization with `has()`
+## Use `auth()` to check if a user is authorized
+
+`auth()` returns the `Authentication` object, which includes the `has()` helper. `auth()` also returns the `protect()` helper. 
+
+`has()` and `protect()` can be used to check if a user is authorized to access certain parts of your application.
+
+### Use `has()` to check if a user is authorized
 
 Use the [`has()`](/docs/references/nextjs/authentication-object#has) helper in order to check if a user is authorized to access a component.
+
+In the following example, the `has()` helper is used to check if a user has the `org:team_settings:manage` permission. If the user does not have the permission, `null` is returned. If the user has the permission, the component will return the "Team Settings" heading.
 
 ```tsx filename="app/page.tsx"
 import { auth } from '@clerk/nextjs';
@@ -98,15 +106,17 @@ export default async function Page() {
 }
 ```
 
-## Authorization with `protect()`
+### Use `protect()` to check if a user is authorized
 
-Use the [`protect()`](#protect) helper to check if a user is authorized to access a component.
+Use the [`protect()`](#protect) helper to protect a route handler from unauthorized access.
 
 <Callout type="warning">
   `auth().protect()` only works for App Router and is considered experimental.
 </Callout>
 
-```tsx filename="app/api/route.[js/ts]"
+In the following example, the `protect()` helper is used to check if a user is authorized to access a route handler. If the user is not authorized, the `protect()` helper will throw a `notFound` Next.js error. If the user is authorized, the `protect()` helper will return the `Authentication` object, which has the `userId` property.
+
+```tsx filename="app/api/route.ts"
 import { auth } from "@clerk/nextjs";
 
 export const POST = () => {
@@ -116,9 +126,11 @@ export const POST = () => {
 }
 ```
 
-## Check your current user's role
+## Use `auth()` to check your current user's role
 
-In some cases, you need to check your user's current organization role before displaying data or allowing certain actions to be performed.
+In some cases, you need to check your user's current organization role before displaying data or allowing certain actions to be performed. 
+
+You can use the `orgRole` property of the `Authentication` object, which is returned by the `auth()` helper, to check the user's current role.
 
 ```tsx filename="app/page.[jsx/tsx]"
 import { auth } from '@clerk/nextjs';
