remove authjs examples to reduce visual noise

--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -84,7 +84,7 @@ You will need to remove the `<SessionProvider session={session}>` provider from 
 ```tsx filename="app/layout.tsx" {1,10,14}
 import { ClerkProvider } from '@clerk/nextjs'
 import './globals.css'
- 
+
 export default function RootLayout({
   children,
 }: {
@@ -130,7 +130,6 @@ If Clerk's Account Portal pages aren't a good fit your app, you can build a cust
 - use Clerk's [pre-built components](/docs/references/nextjs/custom-signup-signin-pages), such as the [`<SignIn />`](/docs/components/authentication/sign-in) and [`<SignUp />`](/docs/components/authentication/sign-up) components
 - build a [fully custom UI using Clerk's API](/docs/custom-flows/overview), leveraging Clerk's React hooks such as [`useSignIn()`](/docs/references/react/use-sign-in) and [`useSignUp()`](/docs/references/react/use-sign-up)
 
-
 ### Protect your app
 
 With Clerk, you can control access to your application in a few different ways. One way is to use Clerk's Middleware to protect your entire application, or specific routes. Another way is to use Clerk's components to conditionally render UI based on the user's authentication state. You can hide or show UI based on whether the user is signed in or not.
@@ -147,12 +146,12 @@ The example below is a basic configuration that requires authentication for all 
 
 ```tsx filename="middleware.ts"
 import { authMiddleware } from "@clerk/nextjs";
- 
+
 // This example protects all routes including api/trpc routes
 // Please edit this to allow other routes to be public as needed.
 // See https://clerk.com/docs/references/nextjs/auth-middleware for more information about configuring your Middleware
 export default authMiddleware({});
- 
+
 export const config = {
   matcher: ["/((?!.+\\.[\\w]+$|_next).*)", "/", "/(api|trpc)(.*)"],
 };
@@ -166,7 +165,7 @@ To conditionally render UI when the user is _not_ signed in, wrap it with [`<Sig
 
 ```tsx filename="app/page.tsx"
 import { SignedIn, SignedOut } from "@clerk/nextjs";
- 
+
 export default function Home() {
   return (
     <div>
@@ -187,27 +186,9 @@ export default function Home() {
 
 Replace any Auth.js `getServerSession(req, res, authOptions)` with Clerk's helpers.
 
-Let's see what your code might look like with Auth.js's `getServerSession()`:
-
-```tsx filename="app/page.tsx"
-import { getServerSession } from "next-auth";
-import { authOptions } from "@/pages/api/auth/[...nextauth]";
-
-export default function Page() {
-  const data = await getServerSession(authOptions);
-  console.log(data)
-
-  return (
-    <p>Home Page</p>
-  )
-}
-```
-
-Now let's see what your code should look like when replacing `getServerSession` with Clerk's helpers:
-
 <Tabs type="installer" items={["App Router", "Pages Router"]}>
   <Tab>
-  You can replace Auth.js's `setServerSession` with Clerk's [`auth()`](/docs/references/nextjs/auth#auth) helper in order to read your user data.
+  You can replace Auth.js's `setServerSession()` with Clerk's [`auth()`](/docs/references/nextjs/auth#auth) helper in order to read your user data.
 
   ```tsx failename="app/page.tsx"
   import { auth, currentUser } from "@clerk/nextjs";
@@ -224,7 +205,7 @@ Now let's see what your code should look like when replacing `getServerSession` 
   </Tab>
 
   <Tab>
-  You can replace Auth.js's `setServerSession` with Clerk's [`getAuth()`](/docs/references/nextjs/get-auth#get-auth) helper in order to read your user data.
+  You can replace Auth.js's `setServerSession()` with Clerk's [`getAuth()`](/docs/references/nextjs/get-auth#get-auth) helper in order to read your user data.
 
   ```tsx filename="pages/index.tsx"
   export async function getServerSideProps(context) {
@@ -240,25 +221,7 @@ Now let's see what your code should look like when replacing `getServerSession` 
 
 Replace Auth.js's `useSession()` hook with Clerk's hooks.
 
-Let's see what your code might look like with Auth.js's `useSession()`:
-
-```tsx filename="app/page.tsx"
-'use client'
-import { useSession } from "next-auth/react"
-
-export default function Home() {
-  const { data: session } = useSession()
-  console.log(session)
-
-  return (
-    <p>Home Page</p>
-  )
-}
-```
-
 Clerk's [`useAuth()`](/docs/references/react/use-auth) hook can be used to retrieve basic authentication information. Clerk's [`useUser()`](/docs/references/react/use-user) hook can be used to retrieve the full [`User`](https://clerk.com/docs/references/javascript/user/user#user) object, which includes information about the user, such as their first name, emails, phone numbers, and more.
-
-Let's see what your code might look like when you replace Auth.js's `useSession()` hook with Clerk's hooks:
 
 ```tsx filename="app/page.tsx"
 'use client'
@@ -373,11 +336,11 @@ To retain the user data in your database for easy querying, check out the docume
 4. If you already have an API endpoint in your Auth.js app that returns a list of users, you can use that. Otherwise, you will need to query your database to obtain the user information, or use an export function from a database management tool.
 
 The example below is a SQL query that would return the user information in the correct format for the migration script.
-    
+
 ```sql
   SELECT id as userId, email, name FROM users
 ```
-    
+
 5. Edit the `.env.` file in the migration, and add your Clerk Secret Key using `CLERK_SECRET_KEY`
 6. Run the script with `npm start`
 7. Check that your users are listed in the [Users](https://dashboard.clerk.com/last-active?path=users) section of the Clerk Dashboard. If the users appear to have imported correctly, verify by signing in to your application secured by Clerk with your user account.
