add missing property to SignUp; update useSignUp

--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -24,6 +24,7 @@ Also, the attributes of the `SignUp` object can basically be grouped into three 
 
 | Name | Type | Description |
 | --- | --- | --- |
+| `id` | `string \| undefined` | The unique identifier of the current sign-up. |
 | `status` | `'missing_requirements' \| 'complete' \| 'abandoned' \| null` | The status of the current sign-up.<br/>The following values are supported:<br/><ul><li>`missing_requirements:` There are required fields that are either missing or they are unverified.</li><li>`complete:` All the required fields have been supplied and verified, so the sign-up is complete and a new user and a session have been created.</li><li>`abandoned:` The sign-up has been inactive for a long period of time, thus it's considered as abandoned and need to start over.</li></ul> |
 | `requiredFields` | `string[]` | An array of all the required fields that need to be supplied and verified in order for this sign-up to be marked as complete and converted into a user. |
 | `optionalFields` | `string[]` | An array of all the fields that can be supplied to the sign-up, but their absence does not prevent the sign-up from being marked as complete. |
