add missing code snippet to copy

--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -33,7 +33,7 @@ function getMemberships(params?: GetMembersParams): Promise<ClerkPaginatedRespon
 | --- | --- |
 | <code>Promise\<[ClerkPaginatedResponse][pag-ref]\<[OrganizationMembership][org-mem-ref]\>></code> | A `Promise` which resolves with a [`ClerkPaginatedResponse`][pag-ref] of [`OrganizationMembership`][org-mem-ref] objects. |
 
-## getMembershipRequests()
+## `getMembershipRequests()`
 
 Retrieve the membership requests of the currently active organization.
 
