abstract types from references pages to dedicated pages in the types section of docs

--- a/docs/references/javascript/organization-domain.mdx
+++ b/docs/references/javascript/organization-domain.mdx
@@ -14,8 +14,8 @@ The `OrganizationDomain` object is the model around an organization domain.
 | `id` | `string` | A unique identifier for this organization domain. |
 | `name` | `string` | The name for this organization domain (e.g. example.com). |
 | `organizationId` | `string` | The organization ID of the organization this domain is for. |
-| `enrollmentMode` | `'manual_invitation' \| 'automatic_invitation' \| 'automatic_suggestion'` | An [enrollment mode][enrollment-mode-ref] will change how new users join an organization. |
-| `verification` | [`OrganizationDomainVerification`][org-domain-ver-ref] | The object that describes the status of the verification process of the domain. |
+| `enrollmentMode` | `'manual_invitation' \| 'automatic_invitation' \| 'automatic_suggestion'` | An [enrollment mode](/docs/organizations/verified-domains#enrollment-modes) will change how new users join an organization. |
+| `verification` | [`OrganizationDomainVerification`](#organization-domain-verification) | The object that describes the status of the verification process of the domain. |
 | `affiliationEmailAddress` | `string \| null` | The email address that was used to verify this organization domain. |
 | `totalPendingInvitations` | `number` | The number of total pending invitations sent to emails that match the domain name. |
 | `totalPendingSuggestions` | `number` | The number of total pending suggestions sent to emails that match the domain name. |
@@ -85,7 +85,3 @@ function attemptAffiliationVerification(params: AttemptAffiliationVerificationPa
 | Type | Description |
 | --- | --- |
 | `Promise<OrganizationDomain>` | This method returns a `Promise` which resolves with an `OrganizationDomain` object. |
-
-
-[enrollment-mode-ref]: /docs/organizations/verified-domains#enrollment-modes
-[org-domain-ver-ref]: #organization-domain-verification
