--- a/docs/references/javascript/session-with-activities.mdx
+++ b/docs/references/javascript/session-with-activities.mdx
@@ -16,7 +16,7 @@ While the `SessionWithActivities` object wraps the most important information ar
 | Name | Type | Description |
 | --- | --- | --- |
 | `id` | `string` | A unique identifier for the session. |
-| `status` | [`SessionStatus`](#session-status) | The current state of the session. |
+| `status` | [`SessionStatus`](/docs/references/javascript/types/session-status) | The current state of the session. |
 | `lastActiveAt` | `Date` | The time the session was last active on the [`Client`][client-ref]. |
 | `abandonAt` | `Date` | The time when the session was abandoned by the user. |
 | `expireAt` | `Date` | The time the session expires and will seize to be active. |
@@ -49,23 +49,3 @@ Users can revoke only their own sessions.
 | `city` | `string \| undefined` | The city from which this session activity occurred. Resolved by IP address geo-location. |
 | `country` | `string \| undefined` | The country from which this session activity occurred. Resolved by IP address geo-location. |
 | `isMobile` | `boolean \| undefined` | Will be set to `true` if the session activity came from a mobile device. Set to `false` otherwise. |
-
-
-### `SessionStatus`
-
-```typescript
-type SessionStatus = "abandoned" | "active" | "ended" | "expired" | "removed" | "replaced" | "revoked";
-```
-
-| Value | Description |
-| --- | --- |
-| `abandoned` | The session was abandoned client-side. |
-| `active` | The session is valid and all activity is allowed. |
-| `ended` | The user signed out of the session, but the [`Session`][session-ref] remains in the [`Client`][client-ref] object. |
-| `expired` | The period of allowed activity for this session has passed. |
-| `removed` | The user signed out of the session and the [`Session`][session-ref] was removed from the [`Client`][client-ref] object. |
-| `replaced` | The session has been replaced by another one, but the [`Session`][session-ref] remains in the [`Client`][client-ref] object. |
-| `revoked` | The application ended the session and the [`Session`][session-ref] was removed from the [`Client`][client-ref] object. |
-
-[session-ref]: /docs/references/javascript/session
-[client-ref]: /docs/references/javascript/client
