--- a/docs/references/javascript/user/create-metadata.mdx
+++ b/docs/references/javascript/user/create-metadata.mdx
@@ -1,9 +1,11 @@
 ---
 title: Create User Metadata
-description: These are the methods that help you create data for the user, such as createEmailAddress() and createPhoneNumber().
+description: These are the methods on the User object that help you create data for the user, such as createEmailAddress() and createPhoneNumber().
 ---
 
 # Create user metadata
+
+These are the methods on the [`User`](/docs/javascript/user/user) object that help you create data for the user, such as `createEmailAddress()` and `createPhoneNumber()`.
 
 ## `createEmailAddress()`
 
