--- a/docs/references/javascript/user/totp.mdx
+++ b/docs/references/javascript/user/totp.mdx
@@ -1,9 +1,11 @@
 ---
 title: Time-based One-time Password
-description: These are the methods and types related to Time-based One-time Password (TOTP) functionality that allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
+description: These are the methods on the User object that are related to Time-based One-time Password (TOTP) functionality. These methods allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
 ---
 
 # Time-based one-time password (TOTP)
+
+These are the methods on the [`User`](/docs/javascript/user/user) object that are related to Time-based One-time Password (TOTP) functionality. These methods allow you to generate and verify TOTP secrets, disable TOTP, and manage backup codes for user authentication.
 
 ## Methods
 
