--- a/docs/references/javascript/web3-wallet/verification.mdx
+++ b/docs/references/javascript/web3-wallet/verification.mdx
@@ -1,11 +1,11 @@
 ---
 title: Web3Wallet Verification
-description: These are all methods on the Web3Wallet class that allow you to verify a user's web3 wallet.
+description: These are all methods on the Web3Wallet object that allow you to verify a user's web3 wallet.
 ---
 
 # `Web3Wallet` verification
 
-These are all methods on the [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) class that allow you to verify a user's web3 wallet.
+These are the methods on the [`Web3Wallet`](/docs/references/javascript/web3-wallet/web3-wallet) object that allow you to verify a user's web3 wallet.
 
 ## `prepareVerification()`
 
