fix broken injectkeys instances; add copy that explains injectkeys usage

--- a/docs/advanced-usage/using-proxies.mdx
+++ b/docs/advanced-usage/using-proxies.mdx
@@ -142,6 +142,8 @@ In order to enable proxying, you need to set a proxy URL for your Clerk instance
 
 You can configure your proxy setup via environment variables or via properties.
 
+**Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
+
 <Tabs items={["Environment Variables", "Properties"]}>
   <Tab>
     <InjectKeys>
