--- a/docs/backend-requests/handling/go.mdx
+++ b/docs/backend-requests/handling/go.mdx
@@ -7,7 +7,11 @@ description: Learn how to handle authenticated requests with Go middleware using
 
 ## Go Middleware
 
-The Clerk Go SDK provides an easy-to-use middleware that adds the active session to the request’s context.
+The Clerk Go SDK provides an easy-to-use middleware that adds the active session to the request's context.
+
+**Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
+
+{/* TODO: Is the filename of this code example supposed to be .env? */}
 
 <InjectKeys>
 
@@ -20,7 +24,8 @@ import (
 )
 
 func main() {
-	client, _ := clerk.NewClient({{secret}})
+	// Create a new Clerk client with your secret key from the Clerk Dashboard
+	client, _ := clerk.NewClient(`{{secret}}`)
 
 	mux := http.NewServeMux()
 
