--- a/docs/components/control/authenticate-with-callback.mdx
+++ b/docs/components/control/authenticate-with-callback.mdx
@@ -88,7 +88,7 @@ The `<AuthenticateWithRedirectCallback />` is used to complete a custom OAuth fl
 
   function App() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         {/* Define a / route that displays the OAuth button */}
         <Routes>
           <Route path="/" element={<HomePages />} />
