--- a/docs/components/control/clerk-loaded.mdx
+++ b/docs/components/control/clerk-loaded.mdx
@@ -60,7 +60,7 @@ The `<ClerkLoaded>` component guarantees that the Clerk object has loaded and wi
 
   function App() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <ClerkLoaded>
           <Page />
         </ClerkLoaded>
