--- a/docs/components/control/clerk-loading.mdx
+++ b/docs/components/control/clerk-loading.mdx
@@ -42,7 +42,7 @@ The `<ClerkLoading>` renders its children while Clerk is loading, and is helpful
 
   function App() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <ClerkLoading>
           <div>Clerk is loading</div>
         </ClerkLoading>
