--- a/docs/components/control/multi-session.mdx
+++ b/docs/components/control/multi-session.mdx
@@ -38,7 +38,7 @@ The `<MultisessionAppSupport>` provides a wrapper for your React application tha
 
   function App() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <MultisessionAppSupport>
           <Page />
         </MultisessionAppSupport>
