--- a/docs/components/control/redirect-to-createorganization.mdx
+++ b/docs/components/control/redirect-to-createorganization.mdx
@@ -51,7 +51,7 @@ The `<RedirectToCreateOrganization />` component will navigate to the create org
 
   function PrivatePage() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <SignedIn>
           <RedirectToCreateOrganization/>
         </SignedIn>
