--- a/docs/components/control/redirect-to-organizationprofile.mdx
+++ b/docs/components/control/redirect-to-organizationprofile.mdx
@@ -51,7 +51,7 @@ The `<RedirectToOrganizationProfile />` component will navigate to the organizat
 
   function PrivatePage() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <SignedIn>
           <RedirectToOrganizationProfile/>
         </SignedIn>
