--- a/docs/components/control/redirect-to-signin.mdx
+++ b/docs/components/control/redirect-to-signin.mdx
@@ -50,7 +50,7 @@ The `<RedirectToSignIn />` component will navigate to the sign in URL which has 
 
   function PrivatePage() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <SignedIn>
           Content that is displayed to signed in
           users.
