--- a/docs/components/control/redirect-to-userprofile.mdx
+++ b/docs/components/control/redirect-to-userprofile.mdx
@@ -51,7 +51,7 @@ The `<RedirectToUserProfile />` component will navigate to the user profile URL 
 
   function PrivatePage() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <SignedIn>
           <RedirectToUserProfile/>
         </SignedIn>
