--- a/docs/components/control/signed-in.mdx
+++ b/docs/components/control/signed-in.mdx
@@ -45,7 +45,7 @@ The `<SignedIn>` component offers authentication checks as a cross-cutting conce
 
   function Page() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <section>
           <div>
             This content is always visible.
@@ -100,7 +100,7 @@ import {
 
 function App() {
   return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <Routes>
         <Route
           path="/"
