--- a/docs/components/control/signed-out.mdx
+++ b/docs/components/control/signed-out.mdx
@@ -43,7 +43,7 @@ The `<SignedOut>` component offers authentication checks as a cross-cutting conc
 
   function Page() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <section>
           <div>
             This content is always visible.
@@ -73,7 +73,7 @@ The `<SignedOut>` component offers authentication checks as a cross-cutting conc
 
   function App() {
     return (
-      <ClerkProvider publishableKey={{pub_key}}>
+      <ClerkProvider publishableKey={`{{pub_key}}`}>
         <Routes>
         <Route
           path="/"
