--- a/docs/quickstarts/javascript.mdx
+++ b/docs/quickstarts/javascript.mdx
@@ -54,7 +54,7 @@ At the root of your project, install the ClerkJS package using your package mana
 
 ### Set environment keys
 
-To use the ClerkJS package, you'll need your **Publishable Key** and your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible below. However, both of these values can be found in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. On this page, click on the **Advanced** dropdown to find your **Frontend API URL**. 
+To use the ClerkJS package, you'll need your **Publishable Key** and your **Frontend API URL**. If you are signed into your Clerk Dashboard, your **Publishable key** should be visible below. Otherwise, you can find these values in the Clerk Dashboard on the **[API Keys](https://dashboard.clerk.com/last-active?path=api-keys)** page. On this page, click on the **Advanced** dropdown to find your **Frontend API URL**. 
 
 <InjectKeys>
 
@@ -137,7 +137,7 @@ This example uses [the `<UserButton />` component](/docs/references/javascript/c
 
   const userButtonComponent = document.querySelector<HTMLDivElement>('#user-button')!;
 
-  const clerk = new Clerk({{pub_key}});
+  const clerk = new Clerk(`{{pub_key}}`);
   await clerk.load();
 
   clerk.mountUserButton(userButtonComponent);
@@ -147,7 +147,7 @@ This example uses [the `<UserButton />` component](/docs/references/javascript/c
   <div id="user-button"></div>
   <script>
     const script = document.createElement('script');
-    script.setAttribute('data-clerk-publishable-key', {{pub_key}});
+    script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
     script.async = true;
     script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
 
