--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -84,7 +84,7 @@ In your React project's root folder, you may have an `.env` file alongside `pack
 
 Add the following code to your `.env.local` file to set your public key.
 
-**Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), you can copy your publishable key below.
+**Pro tip!** If you are signed into your Clerk Dashboard, you can copy your publishable key below. Otherwise, you can find it in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
 <InjectKeys>
 
