--- a/docs/references/javascript/overview.mdx
+++ b/docs/references/javascript/overview.mdx
@@ -39,7 +39,7 @@ Once you have installed the package, you will need to import the ClerkJS object 
 ```js
 import Clerk from '@clerk/clerk-js';
 
-const clerkPublishableKey = {{pub_key}};
+const clerkPublishableKey = `{{pub_key}}`;
 const clerk = new Clerk(clerkPublishableKey);
 await clerk.load({
   // Set load options here...
@@ -65,7 +65,7 @@ Add the following script to your site's `<body>` element:
 ```html
 <script>
   // Get this URL and Publishable Key from the Clerk Dashboard
-  const clerkPublishableKey = "{{pub_key}}";
+  const clerkPublishableKey = `{{pub_key}}`;
   const frontendApi = '[your-domain].clerk.accounts.dev';
   const version = '@latest'; // Set to appropriate version
 
