--- a/docs/references/ruby/overview.mdx
+++ b/docs/references/ruby/overview.mdx
@@ -44,7 +44,7 @@ This examples shows how to instantiate an instance of `Clerk::SDK` with your sec
 <InjectKeys>
 
 ```ruby
-clerk = Clerk::SDK.new(secret_key: {{secret}})
+clerk = Clerk::SDK.new(secret_key: `{{secret}}`)
 
 # List all users
 clerk.users.all
@@ -82,11 +82,13 @@ You can customize each instance of the `Clerk::SDK` object by passing keyword ar
 
 ```ruby
 clerk = Clerk::SDK.new(
-    secret_key: {{secret}},
+    secret_key: `{{secret}}`,
     base_url: "Y",
     logger: Logger.new()
 )
 ```
+
+</InjectKeys>
 
 #### Configuration object
 
@@ -96,14 +98,12 @@ If an argument is not provided, the configuration object is looked up, which fal
 
 ```ruby
 Clerk.configure do |c|
-  c.api_key = {{secret}} # if omitted: ENV["CLERK_SECRET_KEY"] - API calls will fail if unset
+  c.api_key = `{{secret}}` # if omitted: ENV["CLERK_SECRET_KEY"] - API calls will fail if unset
   c.base_url = "https://..." # if omitted: "https://api.clerk.com/v1/"
   c.logger = Logger.new(STDOUT) # if omitted, no logging
   c.middleware_cache_store = Rails.cache # if omitted: no caching
 end
 ```
-
-</InjectKeys>
 
 </InjectKeys>
 
