--- a/docs/integrations/databases/supabase.mdx
+++ b/docs/integrations/databases/supabase.mdx
@@ -54,7 +54,9 @@ Reveal the JWT secret to copy it and then paste it in the **Signing key field** 
 
 ## Configure your client
 
-To configure your client, you need to set some local environment variables. Assuming a React application, set the following:
+To configure your client, you need to set some local environment variables. Assuming a React application, set the following.
+
+**Pro tip!** If you are signed into your Clerk Dashboard, you can copy your Clerk publishable key below. Otherwise, you can find it in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
 <InjectKeys>
 
