--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -79,7 +79,7 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
 
       const signInComponent = document.querySelector('#sign-in');
 
-      window.Clerk.openSignIn(signInComponent, {
+      window.Clerk.mountSignIn(signInComponent, {
         appearance: {
           baseTheme: dark
         }
