Moved information about <UserButton /> to that doc, updated code, added links.

--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -71,6 +71,11 @@ In the following example, `<UserButton />` is mounted inside a header component,
         );
       }
       ```
+```html
+<html>
+<body>
+    <header>
+        <h1>My application</h1>
 
       ```jsx filename="userButtonExample.tsx"
       import {
@@ -81,134 +86,7 @@ In the following example, `<UserButton />` is mounted inside a header component,
         UserButton,
       } from "@clerk/nextjs";
 
-      function Header() {
-      return (
-          <header style={{ display: "flex", justifyContent: "space-between", padding: 20 }}>
-            <h1>My App</h1>
-            <SignedIn>
-              {/* Mount the UserButton component */}
-              <UserButton />
-            </SignedIn>
-            <SignedOut>
-              {/* Signed out users get sign in button */}
-              <SignInButton/>
-            </SignedOut>
-          </header>
-      );
-      }
-
-      function MyApp({ pageProps }) {
-        return (
-          <ClerkProvider {...pageProps}>
-            <Header />
-          </ClerkProvider>
-        );
-      }
-
-      export default MyApp;
-      ```
-    </CodeBlockTabs>
-  </Tab>
-
-  <Tab>
-    ```tsx filename="app.tsx"
-    import {
-      ClerkProvider,
-      SignedIn,
-      SignIn,
-      SignUp,
-      UserButton,
-    } from "@clerk/clerk-react";
-    import { BrowserRouter, Route, Routes, useNavigate } from "react-router-dom";
-
-    const clerk_pub_key = process.env.REACT_APP_CLERK_PUBLISHABLE_KEY;
-
-    function PublicPage() {
-        return (
-          <>
-            <h1>Public page</h1>
-            <a href="/protected">Go to protected page</a>
-          </>
-        );
-    }
-
-    function ProtectedPage() {
-      return (
-          <>
-            <h1>Protected page</h1>
-            <UserButton />
-          </>
-        );
-    }
-
-    function ClerkProviderWithRoutes() {
-      const navigate = useNavigate();
-
-      return (
-        <ClerkProvider
-          publishableKey={clerk_pub_key}
-          navigate={(to) => navigate(to)}>
-            <Routes>
-              <Route path="/" element={<PublicPage />} />
-              <Route
-              path="/sign-in/*"
-              element={<SignIn routing="path" path="/sign-in" />}
-              />
-              <Route
-              path="/sign-up/*"
-              element={<SignUp routing="path" path="/sign-up" />}
-              />
-              <Route
-                path="/protected"
-                element={
-                  <SignedIn>
-                    <ProtectedPage />
-                  </SignedIn>
-                }
-              />
-            </Routes>
-          </ClerkProvider>
-        );
-    }
-
-    function App() {
-      return (
-        <BrowserRouter>
-          <ClerkProviderWithRoutes />
-        </BrowserRouter>
-      );
-    }
-    ```
-  </Tab>
-
-  <Tab>
-    ```tsx filename="router/index.tsx"
-    import {
-      UserButton,
-    } from "@clerk/remix";
-    import { getAuth } from "@clerk/remix/ssr.server";
-    import { LoaderFunction, redirect } from "@remix-run/node";
-
-    export const loader: LoaderFunction = async (args) => {
-      const { userId } = await getAuth(args);
-      if(!userId){
-        return redirect("/sign-in");
-      }
-      return {};
-    }
-
-    export default function Index() {
-      return (
-        <div>
-            <h1>Index route</h1>
-            <p>You are signed in!</p>
-            <UserButton />
-        </div>
-      );
-    }
-    ```
-  </Tab>
-</Tabs>
+</CodeBlockTabs>
 
 ## Usage with JavaScript
 
