--- a/docs/custom-flows/sign-out.mdx
+++ b/docs/custom-flows/sign-out.mdx
@@ -16,7 +16,9 @@ You can either sign out users in Clerk by utilizing [Clerk Components](/docs/com
 - You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.com/). For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 - You need to install the correct SDK for your application. You can find steps on how to do so through Clerk's [quickstart](/docs/quickstarts/overview) guides.
 
-## Using Clerk components
+## Components that provide sign out options
+* [`<UserButton />`](/docs/components/user/user-profile)
+* [`<SignOutButton /`](/docs/components/unstyled/sign-up-button)
 
 The simplest way to sign out users is via the [`<UserButton />`][user-button] component. The [`<UserButton />`][user-button] is a pre-built UI component that gives a signed-in user a way to manage their account. One of the options is a **Sign out** button.
 
@@ -74,15 +76,18 @@ const Header = () => {
 
 ## Custom sign-out
 
-If the pre-built [`<UserButton />`][user-button] doesn't cover your needs, you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to build a custom solution.
+If the pre-built `<UserButton />` doesn't cover your needs, you can use the [`signOut()`](/docs/references/javascript/clerk/clerk#sign-out) function to build a custom solution.
 
 In this example, the [`useClerk()`](/docs/references/react/use-clerk) hook is used to access the [`signOut()`](https://clerk.com/docs/references/javascript/clerk/clerk#sign-out) function. We then use the [`useRouter()`](https://nextjs.org/docs/pages/api-reference/functions/use-router) hook from Next.js to redirect the user to the home page (`/`) after they sign out.
 
-<CodeBlockTabs type="framework" options={["React", "JavaScript"]}>
+<CodeBlockTabs type="framework" options={["Next.js", "JavaScript"]}>
 ```jsx
-import { useClerk } from "@clerk/clerk-react";
+'use client'
+
+import { useClerk } from "@clerk/nextjs";
 import { useRouter } from 'next/navigation'
 
+// Import this component where you want to display a Sign Out button
 const SignOutButton = () => {
   const { signOut } = useClerk();
   const router = useRouter()
