--- a/docs/references/javascript/clerk/sign-in.mdx
+++ b/docs/references/javascript/clerk/sign-in.mdx
@@ -42,7 +42,7 @@ In the example below, the `<SignIn />` component is rendered to a `<div>` elemen
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
-  // Add a <div> element with id="sign-in" to your HTML
+  // Selects for <div id="app"> and adds a <div id="sign-in"> to it
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
       id="sign-in"
