--- a/docs/references/javascript/clerk/sign-up.mdx
+++ b/docs/references/javascript/clerk/sign-up.mdx
@@ -22,6 +22,7 @@ Render the [`<SignUp />`][signup-ref] component to an HTML `<div>` element.
   import Clerk from '@clerk/clerk-js';
   import { dark } from "@clerk/themes";
 
+  // Selects for <div id="app"> and adds a <div id="sign-up"> to it
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
       id="sign-up"
