--- a/docs/references/javascript/user/user.mdx
+++ b/docs/references/javascript/user/user.mdx
@@ -22,9 +22,8 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 | `lastName` | `string \| null` | The user's last name. |
 | `fullName` | `string \| null` | The user's full name. |
 | `username` | `string \| null` | The user's username. |
-| `imageUrl` | `string` | Holds the users profile image or avatar. |
 | `hasImage` | `boolean` | A getter boolean to check if the user has uploaded an image or one was copied from OAuth. Returns `false` if Clerk is displaying an avatar for the user. |
-| `profileImageUrl` (deprecated) | `string \| null` | Deprecated in favor of `image_url`. |
+| `imageUrl` | `string` | The URL of the user's profile image. |
 | `primaryEmailAddress` | [`EmailAddress`][email-ref] \| `null` | Information about the user's primary email address. |
 | `primaryEmailAddressId` | `string \| null` | The unique identifier for the `EmailAddress` that the user has set as primary. |
 | `emailAddresses` | [`EmailAddress[]`][email-ref] | An array of all the `EmailAddress` objects associated with the user. Includes the primary. |
@@ -58,11 +57,56 @@ The ClerkJS SDK provides some helper [methods](#methods) on the `User` object to
 
 ### `update()`
 
+Updates the user's attributes. Use this method to save information you collected about the user.
+
 ```typescript
 function update: (params: UpdateUserParams) => Promise<User>;
 ```
 
-Updates the user's attributes. Use this method to save information you collected about the user.
+<InjectKeys>
+
+{/* TODO (Alexis): Finish updating these code examples */}
+
+<CodeBlockTabs type="npm-script" options={['NPM Module', 'window.Clerk']}>
+  ```typescript
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk(`{{pub_key}}`);
+  await clerk.load();
+  window.Clerk = clerk;
+
+  
+  ```
+
+  ```html
+  <!-- Add a <div> element with id="sign-in" to your HTML -->
+  <div id="sign-in"></div>
+
+  <script>
+    const script = document.createElement('script');
+    // Set your Clerk publishable key
+    script.setAttribute('data-clerk-publishable-key', `{{pub_key}}`);
+    script.async = true;
+    script.src = `https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js`;
+
+    script.addEventListener('load', async function () {
+      await window.Clerk.load();
+
+      const signInComponent = document.querySelector('#sign-in');
+
+      window.Clerk.openSignIn(signInComponent, {
+        appearance: {
+          baseTheme: dark
+        }
+      });
+    });
+    document.body.appendChild(script);
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
 
 #### `UpdateUserParams`
 
@@ -71,7 +115,6 @@ All props below are optional.
 | Name | Type | Description |
 | --- | --- | --- |
 | `username` | `string` | The user's username. |
-| `password` (deprecated) | `string` | The user's password.<br />This property is deprecated. This will be removed in the next major version (V5). Please use [`updatePassword(params)`](/docs/references/javascript/user/password-management#update-password) instead. |
 | `firstName` | `string` | The user's first name. |
 | `lastName` | `string` | The user's last name. |
 | `primaryEmailAddressId` | `string` | The unique identifier for the [`EmailAddress`][email-ref] that the user has set as primary. |
@@ -79,21 +122,27 @@ All props below are optional.
 | `primaryWeb3WalletId` | `string` | The unique identifier for the [`Web3Wallet`][web3-ref] that the user signed up with. |
 | `unsafeMetadata` | `{[string]: any} \| null` | Metadata that can be read and set from the Frontend API. One common use case for this attribute is to implement custom fields that will be attached to the `User` object.<br />Please note that there is also an `unsafeMetadata` attribute in the [`SignUp`](/docs/references/javascript/sign-up/sign-up) object. The value of that field will be automatically copied to the user's unsafe metadata once the sign up is complete. |
 
+#### `update()` returns
+
+| Type | Description |
+| --- | --- |
+| <code>Promise\<User\></code> | This method returns a `Promise` which resolves with the current `User` object. |
+
 ### `delete()`
+
+Deletes the current user.
 
 ```typescript
 function delete: () => Promise<void>;
 ```
 
-Deletes the current user.
-
 ### `setProfileImage()`
+
+Adds the user's profile image or replaces it if one already exists. This method will upload an image and associate it with the user.
 
 ```typescript
 function setProfileImage: (params: SetProfileImageParams) => Promise<ImageResource>;
 ```
-
-Adds the user's profile image or replaces it if one already exists. This method will upload an image and associate it with the user.
 
 #### `SetProfileImageParams`
 
@@ -101,11 +150,11 @@ Adds the user's profile image or replaces it if one already exists. This method 
 | --- | --- | --- |
 | `file` | `Blob \| File \| string \| null` | The file to set as the user's profile image. |
 
-#### Returns
+#### `setProfileImage()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[ImageResource](#image-resource)\></code> | The uploaded image. |
+| <code>Promise\<[ImageResource](#image-resource)\></code> | This method returns a `Promise` which resolves with the current uploaded image. |
 
 ##### `ImageResource`
 
@@ -115,30 +164,29 @@ Adds the user's profile image or replaces it if one already exists. This method 
 | `name` | `string \| null` | The name of the image. |
 | `publicUrl` | `string \| null` | The publically accessible url for the image. |
 
-
 ### `getSessions()`
+
+Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
 
 ```typescript
 function getSessions: () => Promise<SessionWithActivities[]>;
 ```
 
-Retrieves all **active** sessions for this user. This method uses a cache so a network request will only be triggered only once.
-
-#### Returns
+#### `getSessions()` returns
 
 | Type | Description |
 | --- | --- |
-| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)\></code> | The list of active user sessions. |
+| <code>Promise\<[SessionWithActivities](/docs/references/javascript/session-with-activities)[]\></code> | This method returns a `Promise` which resolves with an array of `SessionWithActivities` objects. |
 
 ### `isPrimaryIdentification()`
+
+A check whether or not the given resource is the primary identifier for the user.
 
 ```typescript
 function isPrimaryIdentification: (ident: EmailAddressResource | PhoneNumberResource | Web3WalletResource) => boolean;
 ```
 
-A check whether or not the given resource is the primary identifier for the user.
-
-#### Params
+#### `isPrimaryIdentification()` params
 
 | Name | Type | Description |
 | --- | --- | --- |
@@ -150,22 +198,22 @@ In addition to the methods listed above, the `User` class also has the following
 
 ### Time-based one-time password (TOTP)
 
-*   [`createTOTP()`](/docs/references/javascript/user/totp#create-totp)
-*   [`verifyTOTP()`](/docs/references/javascript/user/totp#verify-totp)
-*   [`disableTOTP()`](/docs/references/javascript/user/totp#disable-totp)
-*   [`createBackupCode()`](/docs/references/javascript/user/totp#create-backup-code)
+- [`createTOTP()`](/docs/references/javascript/user/totp#create-totp)
+- [`verifyTOTP()`](/docs/references/javascript/user/totp#verify-totp)
+- [`disableTOTP()`](/docs/references/javascript/user/totp#disable-totp)
+- [`createBackupCode()`](/docs/references/javascript/user/totp#create-backup-code)
 
 ### Password management
 
-*   [`updatePassword()`](/docs/references/javascript/user/password-management#update-password)
-*   [`removePassword()`](/docs/references/javascript/user/password-management#remove-password)
+- [`updatePassword()`](/docs/references/javascript/user/password-management#update-password)
+- [`removePassword()`](/docs/references/javascript/user/password-management#remove-password)
 
 ### Create metadata
 
-*   [`createEmailAddress()`](/docs/references/javascript/user/create-metadata#create-email-address)
-*   [`createPhoneNumber()`](/docs/references/javascript/user/create-metadata#create-phone-number)
-*   [`createWeb3Wallet()`](/docs/references/javascript/user/create-metadata#create-web-3-wallet)
-*   [`createExternalAccount()`](/docs/references/javascript/user/create-metadata#create-external-account)
+- [`createEmailAddress()`](/docs/references/javascript/user/create-metadata#create-email-address)
+- [`createPhoneNumber()`](/docs/references/javascript/user/create-metadata#create-phone-number)
+- [`createWeb3Wallet()`](/docs/references/javascript/user/create-metadata#create-web-3-wallet)
+- [`createExternalAccount()`](/docs/references/javascript/user/create-metadata#create-external-account)
 
 [web3-ref]: /docs/references/javascript/web3-wallet/web3-wallet
 [exacc-ref]: /docs/references/javascript/external-account
